--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Orion IA</title>
+    <title>Orion IA: Vamos criar o seu Negócio Digital?</title>
   </head>
   <body class="bg-orion-light text-slate-900 antialiased transition-colors duration-500 dark:bg-orion-dark dark:text-slate-100">
     <div id="root"></div>
